--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body class="container" ng-app="aplicacao">
 	<div class="head-inner">
 		<h1 style="text-align: center; color: blue;">
-			Bem vindo ao Curso de Desenvlvimento WEB com Angular JS
+			Bem vindo ao Curso de Desenvolvimento WEB com Angular JS
 		</h1>
 	</div>
 	<div ng-controller="PrimeiroController" class="well">
 		<p>Olá, {{nome}} seja bem-vindo!</p>
 		<div ng-class="{'card border-primary mb-3': iniciado, 'card border-danger mb-3': !iniciado}">
-			<div class="card-heading">
+			<div class="card-header">
 				<h3 class="card-title">Situação do curso</h3>
 			</div>
 			<div class="card-body">
@@ -37,6 +37,24 @@
 		<button ng-hide="iniciado" ng-click="iniciar()" class="btn btn-success">
 			Iniciar
 		</button>
+		<h3>Nova Inscrição no Curso</h3>
+		<form name="form_1">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="form-group form-group-default">
+						<label>Nome</label>
+						<input class="form-control" type="text" id="nome_aluno" name="nome_aluno" ng-model="nome_aluno">
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<button ng-click="submeter()" class="btn btn-primary">
+						Adicionar
+					</button>
+				</div>
+			</div>
+		</form>
 	</div>
 	<div class="container-fluid container-fixed-lg footer">
 		<div class="copyright sm-text-center">
