--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="aplicacao">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,88 +8,13 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 	<title>Document</title>
 </head>
-<body class="container" ng-app="aplicacao">
+<body class="container">
 	<div class="head-inner">
 		<h1 style="text-align: center; color: blue;">
 			Bem vindo ao Curso de Desenvolvimento WEB com Angular JS
 		</h1>
 	</div>
-	<div ng-controller="PrimeiroController" class="well">
-		<p>Olá, {{nome}} seja bem-vindo!</p>
-		<div ng-class="{'card border-primary mb-3': iniciado, 'card border-danger mb-3': !iniciado}">
-			<div class="card-header">
-				<h3 class="card-title">Situação do curso</h3>
-			</div>
-			<div class="card-body">
-				<p ng-show="iniciado">Curso em Andamento!</p>
-				<p ng-hide="iniciado">Curso Finalizado!</p>
-				<p ng-if="!iniciado">Aguarde o próximo curso!</p>
-				<p>Preço do curso: {{valor | currency: 'R$ '}}</p>
-				<p>Última atualização do sistema: {{hoje | date: 'dd/MM/yyyy'}}</p>
-			</div>
-		</div>
-		<div>
-			<label>Definir Preço:</label>
-			<input type="number" id="valor" name="valor" ng-model="valor">
-		</div>
-		<br><br>
-		<h3>Alunos Cadastrados</h3>
-			<label>Filtrar por nome: </label>
-			<input type="text" ng-model="filtro">
-			<div class="table-responsive">
-				<table class="table table-striped">
-					<tr>
-				    	<th ng-click="ordenarPorNome()">
-					    	Nome
-				    	</th>
-						<th ng-click="ordenarPorIdade()">
-					    	Idade
-				    	</th>
-				  	</tr>
-					<tr ng-repeat="aluno in alunos | filter : filtro">
-				    	<td>
-				    		{{aluno.nome}}
-				    	</td>
-						<td>
-				    		{{aluno.idade}}
-				    	</td>
-					</tr>
-				</table>
-			</div>
-		<br>
-		<button ng-show="iniciado" ng-click="finalizar()" class="btn btn-danger">
-			Finalizar
-		</button>
-		<button ng-hide="iniciado" ng-click="iniciar()" class="btn btn-success">
-			Iniciar
-		</button>
-		<h3>Nova Inscrição no Curso</h3>
-		<form name="form_1">
-			<div class="row">
-				<div class="col-md-4">
-					<div class="form-group form-group-default">
-						<label>Nome</label>
-						<input class="form-control" type="text" id="nome_aluno" name="nome_aluno" ng-model="nome_aluno" ng-readonly="!iniciado" ng-minlength="3">
-						<br>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="form-group form-group-default">
-						<label>Idade</label>
-						<input class="form-control" type="number" id="idade_aluno" ng-model="idade_aluno" ng-readonly="!iniciado">
-						<br>
-					</div>
-				</div>	
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<button ng-click="submeter()" class="btn btn-primary"  ng-disabled="!iniciado">
-						Adicionar
-					</button>
-				</div>
-			</div>
-		</form>
-	</div>
+	<div ui-view></div>
 	<div class="container-fluid container-fixed-lg footer">
 		<div class="copyright sm-text-center">
 			<p class="small no-margin pull-left sm-pull-reset">
@@ -99,7 +24,11 @@
 	</div>
 	<script src="scripts/libs/angular.js"></script>
 	<script src="scripts/libs/ngResource.js"></script>
+	<script src="scripts/libs/angular-ui-router.js"></script>
 	<script src="scripts/app.js"></script>
-	<script src="scripts/primeiro-controller.js"></script>
+	<script src="scripts/listagem-de-alunos.js"></script>
+	<script src="scripts/nova-inscricao-controller.js"></script>
+	<script src="scripts/previsao-tempo-controller.js"></script>
+	<script src="scripts/alunos-collection-service.js"></script>
 </body>
 </html>
