Menu interativos com angular

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<ul>
 				<li><a ng-click="irInicio()">Início</a></li>
 				<li><a ng-click="irListagem()">Alunos</a></li>
-				<li><a ng-click="irCadastro()">Cadastro</a></li>
+				<li><a ng-click="irCadastroAluno()">Cadastro</a></li>
 				<li><a ng-click="irPrevisao()">Previsão do Tempo</a></li>
 			</ul>
 	</nav>	
