--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <script src="scripts/nova-inscricao-controller.js"></script>
 <script src="scripts/previsao-tempo-controller.js"></script>
 <script src="scripts/alunos-collection-service.js"></script>
+<script src="scripts/cadastro-aluno-directive.js"></script>
 
 </body>
 </html>
